created and integrated logic for pulling leagues for user